adding more sections

--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
       </h1>
     </section>
 
-    <section id="skills-sectiton" class="skills">
-      <div class="contact"></div>
+    <section id="skills-section">
+      <div class="skills"></div>
     </section>
-
-    <div class="skills"></div>
 
     <!-- RoughEase, ExpoScaleEase and SlowMo are all included in the EasePack file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/EasePack.min.js"></script>
