Still adjusting the layou

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     </section>
 
     <section id="skills-section">
-      <div class="skills"></div>
+      <div class="skills">
+        <div class="services">
+          <h2 class="sevices-word">Services</h2>
+        </div>
+      </div>
     </section>
 
     <!-- RoughEase, ExpoScaleEase and SlowMo are all included in the EasePack file -->
