Looking good. Almost done with the layout.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,30 @@
       <div class="skills">
         <div class="services">
           <h2 class="sevices-word">Services</h2>
+
+          <div class="container">
+            <div class="service ux">
+              <h3>UI/UX DESIGN</h3>
+            </div>
+            <div class="service webdev">
+              <h3>WEB DEVELOPMENT</h3>
+            </div>
+            <div class="service graphics">
+              <h3>GRAPHICS DESIGN</h3>
+            </div>
+          </div>
         </div>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="contact-container">
+        <h4>Contact Me</h3>
+          <p class="email">markpaulbusiness66@gmail.com</p>
+        <ul class="links">
+          <li>Github</li>
+          <li>Behance</li>
+          <li>LinkedIn</li>
+        </ul>
       </div>
     </section>
 
