Adding more Services.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             </div>
           </div>
         </div>
+        <div class="testimonials">
+          <h2 class="services-word">
+            Testimonials
+          </h2>
+        </div>
       </div>
     </section>
     <section id="contact">
