Added a testimonial section

--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
           <div class="container">
             <div class="service ux">
               <h3>UI/UX DESIGN</h3>
+              <p class="paragraph">We provide stunning user-friendly designs for your product. From e-commerce designs, portfolio website designs, business websites, and many more as per your requirements.  </p>
             </div>
             <div class="service webdev">
               <h3>WEB DEVELOPMENT</h3>
+              <p class="paragraph">We provide stunning user-friendly designs for your product. From e-commerce designs, portfolio website designs, business websites, and many more as per your requirements.  </p>
             </div>
             <div class="service graphics">
               <h3>GRAPHICS DESIGN</h3>
+              <p class="paragraph">We provide stunning user-friendly designs for your product. From e-commerce designs, portfolio website designs, business websites, and many more as per your requirements.  </p>
             </div>
           </div>
         </div>
-        <div class="testimonials">
-          <h2 class="services-word">
+        <div class="testimonials ">
+          <h2 class="testimonial">
             Testimonials
           </h2>
         </div>
