added links on the footer

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <h4>Contact Me</h3>
           <p class="email">markpaulbusiness66@gmail.com</p>
         <ul class="links">
-          <li><a href="https://github.com/markvilly">Github</a></li>
-          <li><a href="https://www.behance.net/markpaulart ">Behance</a> </li>
-          <li> <a href="https://www.linkedin.com/in/mark-paul-aab059234/">LinkedIn</a> </li>
+          <li><a class="github" href="https://github.com/markvilly">Github</a></li>
+          <li><a class="behance" href="https://www.behance.net/markpaulart ">Behance</a> </li>
+          <li> <a class="linkedin" href="https://www.linkedin.com/in/mark-paul-aab059234/">LinkedIn</a> </li>
         </ul>
         <img class="pic" src="Mark CV IMAGE.jpeg" alt="" srcset="">
       </div>
