Created a skills poll

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section id="skills-section">
-      <div class="skills">
+      <div class="services-div">
         <div class="services">
           <h2 class="sevices-word">Services</h2>
 
@@ -48,10 +48,48 @@
           </div>
 
         </div>
-        <div class="testimonials ">
-          <h2 class="testimonial">
-            Testimonials
+        <div class="skills-div ">
+          <h2 class="skillses">
+            Skills
           </h2>
+          <hr>
+          <div class="skills">
+            <div >
+              <h4 class="html">HTML5</h4>
+              <div class="html-div-top"></div>
+              <div class="html-div"></div>
+            </div>
+            <div >
+              <h4 class="css">CSS</h4>
+              <div class="css-div"></div>
+              <div class="css-div-top"></div>
+            </div>
+            <div >
+              <h4 class="javascript">JS</h4>
+              <div class="javascript-div-top"></div>
+              <div class="javascript-div"></div>
+            </div>
+            <div >
+              <h4 class="figma">Fig</h4>
+              <div class="figma-div-top"></div>
+              <div class="figma-div"></div>
+            </div>
+            <div >
+              <h4 class="adobexd">XD</h4>
+              <div  class="adobexd-div-top"></div>
+              <div  class="adobexd-div"></div>
+            </div>
+            <div >
+              <h4 class="illustrator">AI</h4>
+              <div class="illustrator-div-top"></div>
+              <div class="illustrator-div"></div>
+            </div>
+            <div >
+              <h4 class="photoshop">PS</h4>
+              <div class="photoshop-div-top"></div>
+              <div class="photoshop-div"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
