We're re-doing the services section.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Oh Hi Mark</title>
+    <script src="https://kit.fontawesome.com/57e8ca50f6.js" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   </head>
@@ -18,80 +19,10 @@
       </h1>
     </section>
 
-    <section id="skills-section">
-      <div class="services-div">
-        <div class="services">
-          <h2 class="sevices-word">Services</h2>
 
-          <div class="container">
-            <div class="service ux">
-              <h3 class="serve">UI/UX DESIGN</h3>
-            </div>
-            <div class="service webdev">
-              <h3>WEB DEVELOPMENT</h3>
-            </div>
-            <div class="service graphics">
-              <h3>GRAPHICS DESIGN</h3>
-            </div>
-          </div>
 
-          <div class="container2">
-            <div class="service2 ux">
-              <h3 class="serve">BRANDING</h3>
-            </div>
-            <div class="service2 webdev">
-              <h3>PRODUCT DESIGN</h3>
-            </div>
-            <div class="service2 graphics">
-              <h3>SOCIAL MEDIA</h3>
-            </div>
-          </div>
-
-        </div>
-        <div class="skills-div ">
-          <h2 class="skillses">
-            Skills
-          </h2>
-          <hr>
-          <div class="skills">
-            <div >
-              <h4 class="html">HTML5</h4>
-              <div class="html-div-top"></div>
-              <div class="html-div"></div>
-            </div>
-            <div >
-              <h4 class="css">CSS</h4>
-              <div class="css-div"></div>
-              <div class="css-div-top"></div>
-            </div>
-            <div >
-              <h4 class="javascript">JS</h4>
-              <div class="javascript-div-top"></div>
-              <div class="javascript-div"></div>
-            </div>
-            <div >
-              <h4 class="figma">Fig</h4>
-              <div class="figma-div-top"></div>
-              <div class="figma-div"></div>
-            </div>
-            <div >
-              <h4 class="adobexd">XD</h4>
-              <div  class="adobexd-div-top"></div>
-              <div  class="adobexd-div"></div>
-            </div>
-            <div >
-              <h4 class="illustrator">AI</h4>
-              <div class="illustrator-div-top"></div>
-              <div class="illustrator-div"></div>
-            </div>
-            <div >
-              <h4 class="photoshop">PS</h4>
-              <div class="photoshop-div-top"></div>
-              <div class="photoshop-div"></div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <section id="skills-section" style="background: red;">
+      
     </section>
     <section id="contact">
       <div class="contact-container">
