Redoing the whole freaking design.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
         <span class="cursor">_</span>
       </h1>
     </section>
-
-
-
-    <section id="skills-section" style="background: red;">
-      
+    <section id="aboutme-section">
+      <p class="text"></p>
     </section>
+
+    <section id="services-section" style="background: blue;"></section>
+
+    <section id="skills-section" ></section>
+
+  
     <section id="contact">
       <div class="contact-container">
         <h4>Contact Me</h3>
