Starting to restyle the ABOUT ME section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
       </h1>
     </section>
     <section id="aboutme-section">
-      <p class="text"></p>
+      <div class="about-me-div">
+        <p class="about-me-text">
+          As a <span class='animated-text'></span> <br> my emphasis is on creating high-quality and influential digital experiences.
+        </p>
+      </div>
+      <div class="about-header">
+        <div class="about-separator"></div>
+        <p class="about-me-head">ABOUT ME</p>
+      </div>
+      
     </section>
 
     <section id="services-section" style="background: blue;"></section>
