Expanding into the services section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <span class="cursor">_</span>
       </h1>
     </section>
+
+    <!-- ABOUT ME SECTION -->
     <section id="aboutme-section">
       <div class="about-me-div">
         <p class="about-me-text">
@@ -75,7 +77,36 @@
        </section>
     </section>
 
-    <section id="services-section"></section>
+    <section id="services-section" >
+      <div class="services-div">
+        <div class="what-i-do-heading heading">WHAT I DO</div>
+        <div class="services">
+          <div class="row-1">
+            <div class="service serv1">
+              <h2 class="title">UI/UX Design</h2>
+              <p class="service-text">
+                I craft interfaces that not only captivate but also enhance user engagement. From wireframes to interactive prototypes, I bring a user-centric approach to every project, ensuring your digital platforms exceeds user expectations.
+              </p>
+            </div>
+            <div class="service serv2">
+              <h2 class="title">Web Development</h2>
+              <p class="service-text">
+                My expertise in HTML, CSS, and JavaScript, combined with a keen eye for design, enables me to create websites that not only look exceptional but also function flawlessly.
+              </p>
+            </div>
+          </div>
+          <div class="row-2">
+            <div class="service serv3">
+              <h2 class="title">Product Design</h2>
+              <p class="service-text">
+                I approach each project with a holistic perspective, combining aesthetics and functionality to create products that not only meet user needs but also stand out in the market.
+              </p>
+            </div>
+            <div class="service serv4"></div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="skills-section" ></section>
 
