ALMOST DONE WITH THE SERVICE SECTION

--- a/index.html
+++ b/index.html
@@ -73,13 +73,27 @@
           <div class="marquee-part">
             WORK
           </div>
+          <div class="marquee-part">
+            WORK
+          </div>
+          <div class="marquee-part">
+            WORK
+          </div>
+          <div class="marquee-part">
+            WORK
+          </div>
+
         </div>
        </section>
     </section>
 
     <section id="services-section" >
       <div class="services-div">
-        <div class="what-i-do-heading heading">WHAT I DO</div>
+        <div class="what-i-do-heading heading">
+          <h2 class="head">WHAT I DO</h2>
+        </div>
+        <div class="vertical rule"></div>
+        <div class="horizontal-rule"></div>
         <div class="services">
           <div class="row-1">
             <div class="service serv1">
@@ -87,22 +101,29 @@
               <p class="service-text">
                 I craft interfaces that not only captivate but also enhance user engagement. From wireframes to interactive prototypes, I bring a user-centric approach to every project, ensuring your digital platforms exceeds user expectations.
               </p>
+              <div class="ui-rule"></div>
             </div>
             <div class="service serv2">
+              <h2 class="title">Product Design</h2>
+              <p class="service-text">
+                I approach each project with a holistic perspective, combining aesthetics and functionality to create products that not only meet user needs but also stand out in the market.
+              </p>
+              <div class="prod-rule"></div>
+            </div>
+          </div>
+          <div class="row-2">
+            <div class="service serv3">
               <h2 class="title">Web Development</h2>
               <p class="service-text">
                 My expertise in HTML, CSS, and JavaScript, combined with a keen eye for design, enables me to create websites that not only look exceptional but also function flawlessly.
               </p>
             </div>
-          </div>
-          <div class="row-2">
-            <div class="service serv3">
-              <h2 class="title">Product Design</h2>
+            <div class="service serv4">
+              <h2 class="title">Brand Design</h2>
               <p class="service-text">
-                I approach each project with a holistic perspective, combining aesthetics and functionality to create products that not only meet user needs but also stand out in the market.
+                As a branding designer, I specialize in creating memorable and impactful brand identities. I work to ensure your brand communicates its values and resonates with your target audience. Let's elevate your brand presence together.
               </p>
             </div>
-            <div class="service serv4"></div>
           </div>
         </div>
       </div>
