Touching more on the skills section.

--- a/index.html
+++ b/index.html
@@ -188,10 +188,21 @@
         <div class="technical-side">
           <h2 class="tech-head">TECHNICAL SKILLS</h2>
           <ul class="skills">
-            <li class="skill"><i class="fa-brands fa-html5"></i></li>
-            <li class="skill"><i class="fa-brands fa-css3-alt"></i></li>
-            <li class="skill"><i class="fa-brands fa-js"></i></li>
-            <li class="skill"><i class="fa-brands fa-figma"></i></li>
+            <li class="skill">
+              <i class="fa-brands fa-html5"></i>
+              <div class="skill-meter html"></div>
+            </li>
+            <li class="skill">
+              <i class="fa-brands fa-css3-alt"></i>
+              <div class="skill-meter css"></div>
+            </li>
+            <li class="skill">
+              <i class="fa-brands fa-js"></i></li>
+              <div class="skill-meter javascript"></div>
+            <li class="skill">
+              <i class="fa-brands fa-figma"></i>
+              <div class="skill-meter figma"></div>
+            </li>
             
           </ul>
         </div>
