Redoing the skill bars

--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
               <i class="fa-brands fa-html5"></i>
               
             </li>
-            <div class="skill-meter html"></div>
+            <div class="skill-meter html">
+              <div class="outer">
+                <div class="inner"></div>
+              </div>
+            </div>
             <li class="skill">
               <i class="fa-brands fa-css3-alt"></i>
               <div class="skill-meter css"></div>
