Technical skills that actually look good.

--- a/index.html
+++ b/index.html
@@ -195,15 +195,45 @@
        <div class="skill-wrapper">
         <div class="technical-side">
           <h2 class="tech-head">TECHNICAL SKILLS</h2>
-          <div class="skill-box">
-            <span class="skill-title">HTML5</span>
+            <div class="skill-box">
+              <span class="skill-title">HTML5</span>
 
-            <div class="skill-bar">
-              <span class="skill-per">
-                <span class="tooltip">90%</span>
-              </span>
+              <div class="skill-bar">
+                <span class="skill-per html">
+                  <span class="tooltip">90%</span>
+                </span>
+              </div>
             </div>
-          </div>
+
+            <div class="skill-box">
+              <span class="skill-title">CSS3</span>
+
+              <div class="skill-bar">
+                <span class="skill-per css">
+                  <span class="tooltip">80%</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="skill-box">
+              <span class="skill-title">JAVASCRIPT</span>
+
+              <div class="skill-bar">
+                <span class="skill-per js" >
+                  <span class="tooltip">75%</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="skill-box">
+              <span class="skill-title">FIGMA</span>
+
+              <div class="skill-bar">
+                <span class="skill-per figma">
+                  <span class="tooltip">80%</span>
+                </span>
+              </div>
+            </div>
 
         </div>
         <div id="soft-side" class="soft-side">
