Getting close to finishing the website.

--- a/index.html
+++ b/index.html
@@ -238,7 +238,13 @@
         </div>
         <div id="soft-side" class="soft-side">
           <h2 class="soft-head">SOFT SKILLS</h2>
-        
+            <div class="soft-wrapper">
+              <div class="soft comm"><span class="skill-soft">Communication</span></div>
+              <div class="soft"><span class="skill-soft">Problem-solving</span></div>
+              <div class="soft"><span class="skill-soft">Team-work</span></div>
+              <div class="soft"><span class="skill-soft">Time-management</span></div>
+              <div class="soft"><span class="skill-soft">Empathy</span></div>
+            </div>
           </div>
           
         </div>
